--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
-.App{
-display:flex;
-/* style:none; */
-flex-wrap: wrap;
+ul {
+  /* padding-inline-start: 0; */
+
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+li {
+  list-style: none;
+  width: 12em;
+  height: 14em;
+  margin: 2em;
+  flex-grow: 1;
 }
